# porkiedev-domain-website

./: .gitignore  Cargo.toml  Dockerfile  LICENSE
assets/: index.html
assets/hengus/: index.html
assets/hengus/css/: style.css
assets/hengus/img/: download.jfif
assets/root/: index.html
assets/root/assets/: index-BamkXwAQ.js  index-D28oXTGR.css
docker/hengus_website/: Dockerfile
docker/root_website/: Dockerfile
docker/website_hengus/: Dockerfile
docker/website_root/: Dockerfile
files/: index.html
files/static/: index.js  stylesheet.css
src/: lib.rs  main.rs
