[package]
name = "website_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-web-static-files = "4.0.1"
static-files = "0.2.3"

[build-dependencies]
static-files = "0.2.1"
