[package]
name = "web"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "root_website"
path = "src/bin/root_website.rs"

[[bin]]
name = "hengus_website"
path = "src/bin/hengus_website.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4.9"
actix-files = "0.6.2"
futures-util = "0.3"
