[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "website_root"
path = "src/bin/website_root.rs"

[[bin]]
name = "website_hengus"
path = "src/bin/website_hengus.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
actix-web = "4.9"
actix-files = "0.6.2"
futures-util = "0.3"
